crates/wac-parser/tests/resolution/fail/invalid-borrow.wac
type x = u32;

type y = borrow<x>;